fix overflow on main element

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
 
 body {
   height: 100vh;
+  overflow: hidden;
+}
+section{
+  overflow-y: scroll;
 }
 
 .grad {
@@ -23,27 +27,24 @@ nav {
   transition: margin 0.6s ease;
 }
 
-
-@layer base{
+@layer base {
   .active {
     @apply -translate-x-96;
   }
 
   .closed {
-   @apply opacity-0 py-0 h-0
+    @apply opacity-0 py-0 h-0;
   }
 
-  .High{
-    @apply border-violet-500 border-l-violet-500 text-indigo-700 
+  .High {
+    @apply border-violet-500 border-l-violet-500 text-indigo-700;
   }
-  .Medium{
-    @apply border-[#2C2B3C]/50 border-l-[#2C2B3C]/80 text-[#2C2B3C]
+  .Medium {
+    @apply border-[#2C2B3C]/50 border-l-[#2C2B3C]/80 text-[#2C2B3C];
   }
-  .Low{
-    @apply border-[#246B36]/50 border-l-[#246B36]/80 text-[#246B36]
-
+  .Low {
+    @apply border-[#246B36]/50 border-l-[#246B36]/80 text-[#246B36];
   }
-
 }
 @layer base {
   @media (min-width: 768px) {
